--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -158,6 +158,7 @@
     </form>
     <juku-form-section ng-if="onElyhakemus()">
       <h3>PÄÄTÖS</h3>
+
       <div class="row">
         <div class="col-md-3">
           <label>Esittelijä</label>
@@ -179,19 +180,19 @@
 
     </juku-form-section>
     <juku-form-section ng-if="onElyhakemus()">
-      <div class="form-group">
-        <label>Lisätietoa päätöskappaleeseen</label>
-        <juku-form-row>
-          <div ng-hide="hakemusPaatetty()">
+      <div class="row">
+        <div class="col-md-8">
+          <label>Lisätietoa päätöskappaleeseen</label>
+            <div ng-hide="hakemusPaatetty()">
           <textarea id="paatosteksti" name="paatosteksti" class="animate msd-elastic: \n;"
                     ng-model="paatos.selite"
                     placeholder="Kirjoita tähän kohtaan tarvittaessa päätöstä tarkentavia perusteita."></textarea>
 
-          </div>
-          <div ng-show="hakemusPaatetty()">
-            <p>{{paatos.selite ? paatos.selite : ""}}</p>
-          </div>
-        </juku-form-row>
+            </div>
+            <div ng-show="hakemusPaatetty()">
+              <p>{{paatos.selite ? paatos.selite : ""}}</p>
+            </div>
+        </div>
       </div>
     </juku-form-section>
     <juku-form-section ng-if="onElyhakemus()">
