LIVIJUKU-547: ELY-hakemukset: varsinainen hakemusnäyttö

--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -1,18 +1,22 @@
 <ng-form id="maararahatarpeet-form" name="maararahatarpeetForm">
   <juku-form-row>
     <div class="col-md-6">
-      <label>Siirtymäajan sopimukset</label>
-      <input name="siirtymaaikasopimukset" type="text" ng-currency="" numeric-only="" class="form-control"
-             ng-model="perustiedot.siirtymaaikasopimukset" ng-disabled="isReadonly()" placeholder="Siirtymäajan sopimukset"
-             uib-tooltip="Siirtymäajan sopimusten määrärahatarve" tooltip-placement="top"
-             tooltip-append-to-body="true" select-on-click/>
+      <form-group-compact label="Siirtymäajan sopimukset" errormessage="sasopimuksetErrorMessage">
+        <label>Siirtymäajan sopimukset</label>
+        <input name="siirtymaaikasopimukset" type="text" ng-currency="" numeric-only="" class="form-control"
+               ng-model="perustiedot.siirtymaaikasopimukset" ng-disabled="isReadonly()"
+               placeholder="Siirtymäajan sopimukset"
+               required select-on-click/>
+      </form-group-compact>
     </div>
     <div class="col-md-6">
-      <label>Joukkoliikennetuki kunnille</label>
-      <input name="joukkoliikennetukikunnat" type="text" ng-currency="" numeric-only="" class="form-control"
-             ng-model="perustiedot.joukkoliikennetukikunnat" ng-disabled="isReadonly()" placeholder="Joukkoliikennetuki kunnille"
-             uib-tooltip="ELYn kunnille myöntämä joukkoliikennetuki" tooltip-placement="top"
-             tooltip-append-to-body="true" select-on-click/>
+      <form-group-compact label="Joukkoliikennetuki kunnille" errormessage="jltkunnilleErrorMessage">
+        <label>Joukkoliikennetuki kunnille</label>
+        <input name="joukkoliikennetukikunnat" type="text" ng-currency="" numeric-only="" class="form-control"
+               ng-model="perustiedot.joukkoliikennetukikunnat" ng-disabled="isReadonly()"
+               placeholder="Joukkoliikennetuki kunnille"
+               required select-on-click/>
+      </form-group-compact>
     </div>
   </juku-form-row>
   <hr>
