--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -89,7 +89,7 @@
   </juku-form-row>
   <juku-form-row>
     <div class="col-md-12">
-      <h4>MENOT YHTEENSÄ: <span uib-tooltip="Siirtymäajan sopimukset + Joukkoliikennetuki + Sidotut + Uudet - Tulot"
+      <h4>MENOT YHTEENSÄ: <span id="menotyhteensa" uib-tooltip="Siirtymäajan sopimukset + Joukkoliikennetuki + Sidotut + Uudet - Tulot"
                                 tooltip-placement="top"
                                 tooltip-append-to-body="true">{{yhteensa() | currency}}</span></h4>
     </div>
