LIVIJUKU-547: ELY-hakemukset: varsinainen hakemusnäyttö ja E2E-testit

--- a/app/scripts/views/yhteinen/hakemukset.html
+++ b/app/scripts/views/yhteinen/hakemukset.html
@@ -9,6 +9,7 @@
       <juku-tabs>
         <juku-tab
           ng-repeat="tyyppi in constants.hakemustyypit"
+          ely="isEly(tyyppi)"
           ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppi})">
           {{ tyyppi | toApplicationName }}
           <juku-badge
