--- a/app/scripts/views/yhteinen/tunnuslukuraportit.html
+++ b/app/scripts/views/yhteinen/tunnuslukuraportit.html
@@ -4,6 +4,7 @@
       <juku-tab
         ng-repeat="tyyppi in tyypit"
         selected="isTabSelected(tyyppi)"
+        ely="isEly(tyyppi)"
         ng-click="toTab(tyyppi)">
         {{ tyyppi | toApplicantName }}
       </juku-tab>
